<resources>
    <string name="app_name">GeoQuiz</string>
    <string name="tv_positive_button">True</string>
    <string name="tv_negative_button">False</string>
    <string name="tv_previous_button_text">Previous</string>
    <string name="tv_next_button_text">Next</string>

    <string name="warning_text">Are you sure you want to do this?</string>
    <string name="show_answer_button">Show Answer</string>
    <string name="cheat_button">Cheat!</string>
    <string name="judgment_toast">Cheating is wrong.</string>

    <string name="question_australia">Is Australia really a Country</string>
    <string name="question_oceans">The Pacific Ocean is larger than the Atlantic Ocean.</string>
    <string name="question_mideast">The Suez Canal connects the Red Sea and the Indian Ocean.</string>
    <string name="question_africa">The source of the Nile River is in Egypt.</string>
    <string name="question_americas">The Amazon River is the longest river in the Americas.</string>
    <string name="question_asia">Lake Baikal is the world\'s oldest and deepest freshwater lake. </string>
</resources>